log/build_2025-02-26_14-05-30/ar_loc_base/stderr.log
  File "/home/GTL/apaul/ros2_hw1/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_kf.py", line 110
    def update_comp   ass(self, logger, Z, uncertainty):
                      ^^^
SyntaxError: invalid syntax

